--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,46 @@ nav {
   font-size: larger;
 }
 
+/* User Guide */
+.guide {
+  position: absolute;
+  left: 10%;
+  right: 10%;
+  top: 50px;
+  padding: 20px 30px;
+  background-color: rgb(230, 229, 229);
+  border: 2px solid grey;
+  border-radius: 10px;
+  /* width: 200px; */
+  /* height: 200px; */
+}
+
+.close-btn {
+  width: min-content;
+  margin-left: auto;
+  cursor: pointer;
+  user-select: none;
+  color: rgb(68, 68, 68);
+  border: 2px solid grey;
+  border-radius: 5px;
+  padding: 0 4px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+section > .margin-bottom {
+  margin-bottom: 40px;
+}
+
 /* Start Page */
 .start-page {
   width: fit-content;
   margin: auto;
 }
 .start-page > button {
-  background-color: darkgrey;
+  background-color: rgb(209, 208, 208);
   padding: 10px 20px;
   border: 2px solid grey;
   border-radius: 5px;
@@ -20,16 +53,19 @@ nav {
 
 /* Board */
 .board {
+  user-select: none;
   width: fit-content;
   margin: auto;
   margin-bottom: 30px;
 }
 
 .row {
+  user-select: none;
   display: flex;
 }
 
 .letter {
+  user-select: none;
   border: 2px solid rgb(105, 103, 103);
   border-radius: 20%;
   display: flex;
@@ -45,19 +81,19 @@ nav {
 }
 
 .green {
-  background-color: rgb(35, 150, 89);
+  background-color: #77a66f;
 }
 
 .yellow {
-  background-color: rgb(231, 231, 31);
+  background-color: #e5d488;
 }
 
 .red {
-  background-color: rgb(184, 47, 47);
+  background-color: #c05b29;
 }
 
 .none {
-  background-color: darkgrey;
+  background-color: rgb(209, 208, 208);
 }
 
 /* Keyboard */
@@ -80,7 +116,7 @@ nav {
   align-items: center;
   border: 2px solid rgb(105, 103, 103);
   border-radius: 3px;
-  background-color: darkgrey;
+  background-color: rgb(209, 208, 208);
   height: 40px;
   width: 30px;
 }
@@ -96,8 +132,8 @@ nav {
 }
 
 .key.wrong {
-  background-color: grey;
-  color: grey;
+  background-color: rgb(137, 137, 137);
+  color: rgb(137, 137, 137);
 }
 
 /* Game Over */
@@ -112,15 +148,15 @@ nav {
 }
 
 .over.win {
-  background-color: rgb(35, 150, 89);
+  background-color: #77a66f;
 }
 
 .over.lose {
-  background-color: rgb(184, 47, 47);
+  background-color: #c05b29;
 }
 
 .restart {
-  background-color: darkgrey;
+  background-color: rgb(209, 208, 208);
   padding: 10px 20px;
   border: 2px solid grey;
   border-radius: 5px;
