--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ nav {
   left: 10%;
   right: 10%;
   top: 50px;
+  margin-bottom: 50px;
   padding: 20px 30px;
   background-color: rgb(230, 229, 229);
   border: 2px solid grey;
