--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ section > .margin-bottom {
   border: 2px solid grey;
   border-radius: 5px;
   padding: 20px 40px;
+  padding-left: 20px;
 }
 
 .diff-choice {
