--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ nav {
   position: relative;
   text-align: center;
   font-size: larger;
+  border-bottom: 1px solid grey;
 }
 
 .language {
@@ -86,7 +87,22 @@ section > .margin-bottom {
   margin: auto;
 }
 
+legend {
+  position: absolute;
+  top: -11px;
+  left: 20%;
+  font-weight: bold;
+  /* font-style: italic; */
+  font-size: 1em;
+  background-color: white;
+  z-index: 1;
+  margin-bottom: 10px;
+}
+
 .difficulty {
+  position: relative;
+  z-index: 0;
+  margin-top: 40px;
   margin-bottom: 20px;
   border: 2px solid grey;
   border-radius: 5px;
@@ -117,8 +133,7 @@ section > .margin-bottom {
 .board {
   user-select: none;
   width: fit-content;
-  margin: auto;
-  margin-bottom: 30px;
+  margin: 30px auto;
 }
 
 .row {
